# changelog-utils

./: .clconfig.json  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  flake.nix
.config/: nextest.toml
.github/workflows/: changelog-diff.yaml  changelog-lint.yaml  docker-build.yml  lint.yml  push-docker.yaml  rust.yml
linter/: config.py
src/: add.rs  change_type.rs  changelog.rs  check_diff.rs  cli.rs  cli_config.rs  config.rs  create_pr.rs  diff_prompt.rs  diff_prompt.txt  entry.rs  errors.rs  escapes.rs  get.rs  git.rs  github.rs  init.rs  inputs.rs  lib.rs  lint.rs  main.rs  release.rs  release_cli.rs  release_type.rs  version.rs
src/ai/: diff_prompt.rs  mod.rs
src/cli/: add.rs  check.rs  check_diff.rs  commands.rs  config.rs  create_pr.rs  get.rs  init.rs  inputs.rs  lint.rs  migrate.rs  mod.rs  release.rs
src/common/: changelog.rs  entry.rs  logs.rs  mod.rs
src/config/: change_type.rs  config.rs  migration.rs  mod.rs  mode.rs
src/multi_file/: change_type.rs  changelog.rs  entry.rs  mod.rs  release.rs
src/single_file/: change_type.rs  changelog.rs  entry.rs  mod.rs  release.rs
src/testdata/: example_config.json  example_config_without_optionals.json  example_git_diff.txt
src/utils/: config.rs  git.rs  github.rs  mod.rs  version.rs
tests/: add_test.rs  init_test.rs  lint_test.rs
tests/testdata/: changelog_fixed.md  changelog_to_be_fixed.md  evmos_config.json
tests/testdata/multi_file/: noble_config.json
tests/testdata/multi_file/fail/.changelog/v8.0.5/dependencies/: 466-bump-comet.md
tests/testdata/multi_file/fail/.changelog/v9.0.0/features/: 448-integrate-dollar.md
tests/testdata/multi_file/ok/: .clconfig.json
tests/testdata/multi_file/ok/.changelog/v9.0.0/dependencies/: 488-bump-pfm.md  495-bump-sdk.md
tests/testdata/single_file/: changelog_fail.md  changelog_new_category_after_add.md  changelog_no_unreleased.md  evmos_config.json
