[package]
name = "clu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"
regex = "1.10.4"
serde = { version="1.0.202", features = ["derive"] }
serde_json = "1.0.117"
assert_fs = "1.1.1"
predicates = "3.1.0"
url = "2.5.0"
inquire = "0.7.5"
