[package]
name = "clu"
authors = ["Malte Herrmann"]
version = "1.6.0"
edition = "2021"
description = "Everything you need to handle your changelogs."
repository = "https://github.com/MalteHerrmann/changelog-utils"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "2.0.17"
regex = "1.10.4"
serde = { version="1.0.202", features = ["derive"] }
serde_json = "1.0.117"
assert_fs = "1.1.1"
predicates = "3.1.0"
url = "2.5.0"
inquire = { version = "0.7.5", features = ["editor"]}
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["full"] }
octocrab = "0.44.0"
rig-core = "0.11.0"
parrot = { git = "https://github.com/malteherrmann/parrot", tag = "v0.0.2" }

[dev-dependencies]
tempfile = "3.10.1"

[features]
remote = []
