[package]
name = "clu"
authors = ["Malte Herrmann"]
version = "1.6.1"
edition = "2021"
description = "Everything you need to handle your changelogs."
repository = "https://github.com/MalteHerrmann/changelog-utils"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
regex = "1.12.3"
serde = { version="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
assert_fs = "1.1.3"
predicates = "3.1.4"
url = "2.5.8"
inquire = { version = "0.7.5", features = ["editor"]}
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["full"] }
octocrab = { version = "0.49.5", default-features = false, features = [
  "default-client",
  "jwt-aws-lc-rs",
  "rustls"
] }
rig-core = "0.32.0"
parrot = { git = "https://github.com/malteherrmann/parrot", tag = "v0.0.2" }

[dev-dependencies]
tempfile = "3.27.0"

[features]
remote = []
